# pancake-db

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
client/: Cargo.toml
client/src/: errors.rs  lib.rs
client/src/client/: api.rs  create_table.rs  delete.rs  mod.rs  read.rs  write_to_partition.rs
core/: Cargo.toml
core/src/: encoding.rs  errors.rs  lib.rs  rep_levels.rs  utils.rs
core/src/compression/: bools.rs  floats.rs  ints.rs  mod.rs  q_codec.rs  rep_levels.rs  string_like.rs  strings.rs  traits.rs  utils.rs  zstd_codec.rs
core/src/encoding/: byte_reader.rs  decoder.rs  encoder.rs  mod.rs
core/src/primitives/: bools.rs  bytess.rs  floats.rs  ints.rs  mod.rs  string_likes.rs  strings.rs  timestamps.rs  traits.rs
examples/: publisher.rs
examples/client-runthrough/: Cargo.toml
examples/client-runthrough/src/: main.rs
examples/curl/: create_table.sh  list.sh  read.sh  write_row.sh
examples/speed-test/: create_dataset.py
server/: Cargo.toml
server/src/: constants.rs  dirs.rs  errors.rs  logging.rs  main.rs  opt.rs  types.rs  utils.rs
server/src/locks/: deletion.rs  mod.rs  partition.rs  segment.rs  table.rs  traits.rs  trivial.rs
server/src/metadata/: compaction.rs  correlation.rs  deletion.rs  global.rs  partition.rs  segment.rs  table.rs  traits.rs
server/src/ops/: alter_table.rs  compact.rs  create_table.rs  delete_from_segment.rs  drop_table.rs  flush.rs  get_schema.rs  list_segments.rs  mod.rs  read_segment_column.rs  read_segment_deletions.rs  traits.rs  write_to_partition.rs
server/src/server/: alter_table.rs  compact.rs  create_table.rs  delete.rs  get_schema.rs  mod.rs  read.rs  recovery.rs  write.rs  write_simple.rs
server/src/storage/: compaction.rs  deletion.rs  flush.rs  global.rs  mod.rs  partition.rs  schema.rs  segment.rs  segments.rs  shared_hash_map.rs  table.rs  traits.rs
server/src/utils/: common.rs  decoding_seek.rs  dirs.rs  mod.rs  navigation.rs  sharding.rs  shared_hash_map.rs
src/: constants.rs  dirs.rs  errors.rs  logging.rs  main.rs  metadata.rs  opt.rs  serde_models.rs  types.rs  utils.rs
src/compression/: ints.rs  mod.rs  strings.rs
src/encoding/: mod.rs
src/locks/: deletion.rs  mod.rs  partition.rs  segment.rs  table.rs  traits.rs  trivial.rs
src/metadata/: compaction.rs  global.rs  immutable.rs  mod.rs  partition.rs  raft.rs  segment.rs  table.rs  traits.rs
src/ops/: alter_table.rs  compact.rs  create_table.rs  create_table_rest.rs  delete_from_segment.rs  drop_table.rs  drop_table_rest.rs  flush.rs  get_schema.rs  list_segments.rs  list_tables.rs  list_tables_rest.rs  mod.rs  read_segment_column.rs  read_segment_deletions.rs  traits.rs  write_to_partition.rs  write_to_partition_rest.rs
src/raft/: mod.rs
src/server/: alter_table.rs  compact.rs  create_table.rs  delete.rs  get_schema.rs  grpc.rs  list_tables.rs  misc.rs  mod.rs  read.rs  recovery.rs  s3.rs  write.rs  write_simple.rs
src/server/storage/: compaction.rs  flush.rs  schema.rs  segments.rs  traits.rs
src/server/upgrades/: mod.rs
src/storage/: compaction.rs  flush.rs  mod.rs  schema.rs  segments.rs  traits.rs
src/utils/: common.rs  decoding_seek.rs  dirs.rs  mod.rs  navigation.rs  object_storage.rs  read_segment_column_stream.rs  rest.rs  shared_hash_map.rs
