[package]
name = "pancake-db-server"
version = "0.0.0"
authors = ["mwlon <m.w.loncaric@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.48"
chrono = {version="0.4", features=["serde"]}
futures = "0.3.12"
hyper = "0.14.9"
log = "0.4.14"
pancake-db-core = "=0.0.0-alpha.1"
pancake-db-idl = "=0.0.0-alpha.1"
protobuf = "=3.0.0-alpha.2"
rand = "0.8.4"
serde_json = "1.0.59"
serde = {version="1.0.117", features=["derive"]}
structopt = "0.3.22"
tokio = {version="1.2.0", features=["full"]}
tokio-stream = "0.1.7"
tower = {version="0.4.6", features=["make"]}
tower-http = {version="0.1.1", features=["add-extension"]}
uuid = {version="0.8.2", features=["serde", "v4"]}
warp = "0.3.1"
base64 = "0.13.0"

[dev-dependencies]
pancake-db-client = "=0.0.0-alpha.1"

[[example]]
name = "publisher"
path = "examples/publisher.rs"
