[package]
name = "pancake-db-server"
version = "0.0.0"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
description = "PancakeDB server binary crate"
homepage = "https://pancakedb.com"
keywords = ["pancake", "db", "server"]
license = "BUSL-1.1"
repository = "https://github.com/pancake-db/pancake-db"

[dependencies]
async-std = "1.9.0"
async-stream = "0.3.2"
async-trait = "0.1.48"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3.12"
http = "0.2.7"
hyper = "0.14.9"
log = "0.4.14"
pancake-db-core = {version = "0.2.0", path = "../pancake-core/core"}
pancake-db-idl = {version = "0.2.0", features = ["service"], path = "../pancake-idl/rust"}
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.8.4"
serde_json = "1.0.59"
serde = {version = "1.0.117", features = ["derive"]}
structopt = "0.3.22"
tokio = {version = "1.2.0", features = ["full"]}
tokio-stream = "0.1.7"
toml = "0.5.9"
tonic = "0.6.2"
tower = {version = "0.4.6", features = ["make"]}
tower-http = {version = "0.1.1", features = ["add-extension"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
warp = "0.3.1"

[dev-dependencies]
pancake-db-client = {version = "0.2.0", path = "../pancake-core/client"}

[[example]]
name = "publisher"
path = "examples/publisher.rs"
