[package]
name = "pancake-db-core"
version = "0.0.0"
authors = ["mwlon <m.w.loncaric@gmail.com>"]
edition = "2018"

[dependencies]
pancake-db-idl = {path= "../../pancake-idl/rust", version="0.0.0"}
protobuf = {git="https://github.com/stepancheg/rust-protobuf"}
q_compress = {path="../../quantile-compression"}
serde_json = "1.0.59"
serde = {version="1.0.117", features=["derive"]}
zstd = "0.9"
