[package]
name = "pancake-db-core"
version = "0.0.0"
authors = ["mwlon <m.w.loncaric@gmail.com>"]
edition = "2018"

[dependencies]
pancake-db-idl = {path= "../../pancake-idl/rust"}
protobuf = {git="https://github.com/stepancheg/rust-protobuf"}
q_compress = {path="../../quantile-compression"}
zstd = "0.9"
