[package]
name = "pancake-db-server"
version = "0.0.0"
authors = ["mwlon <m.w.loncaric@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.48"
chrono = {version="0.4", features=["serde"]}
futures = "0.3.12"
hyper = "0.14.9"
log = "0.4.14"
pancake-db-core = {path="../../pancake-core/core"}
pancake-db-idl = {path="../../pancake-idl/rust"}
protobuf = {git="https://github.com/stepancheg/rust-protobuf", rev="b3fe22932968995779e4046189becdf7be82ba1d"}
serde_json = "1.0.59"
serde = {version="1.0.117", features=["derive"]}
structopt = "0.3.22"
tokio = {version="1.2.0", features=["full"]}
tokio-stream = "0.1.7"
tower = {version="0.4.6", features=["make"]}
tower-http = {version="0.1.1", features=["add-extension"]}
uuid = {version="0.8.2", features=["v4"]}
warp = "0.3.1"
