[package]
name = "pancake-db-example"
version = "0.0.0"
authors = ["mwlon <m.w.loncaric@gmail.com>"]
edition = "2018"

[dependencies]
pancake-db-client = {path="../../client"}
pancake-db-idl = {path="../../../pancake-idl/rust"}
protobuf = {git="https://github.com/stepancheg/rust-protobuf", rev="b3fe22932968995779e4046189becdf7be82ba1d"}
tokio = {version="1.2.0", features=["full"]}
